@@ -38,6 +38,8 @@
 <p>2015-04-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/annotate.c (AnnotateImage): Fix Coverity 55863
+&quot;Uninitialized scalar variable&quot;.</li>
 <li>wand/magick_wand.c (MagickDrawImage): Fix Coverity 55828
 &quot;Resource leak&quot;.
 (MagickMontageImage): Fix Coverity 55835 &quot;Resource leak&quot;.</li>
